# validate-aws-policies

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
docs/: index.md
examples/policies/permissions_set/: policy_allow_all_access_devs_special_users.json  policy_allow_all_access_devs_special_users_2.json
src/validate_aws_policies/: validate_policies.py  version.py
src/validate_aws_policies/iam_access_analyzer/: iam_access_analyzer.py
src/validate_aws_policies/ops/: ops.py
